rounded button radius

--- a/views/home.html
+++ b/views/home.html
@@ -79,7 +79,7 @@
                 <button type="button" class="btn btn-primary rounded align-items-center">Create a Profile!</button>
             </div>
         </div>
-        <div class="col-md-6 rounded pt-4">
+        <div class="col-md-6 rounded pt-5 pl-5">
             <img src="images/pet.jpg" alt="pet couple" class="rounded">
         </div>
     </div>
