--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,10 @@
+<!--
+Name: Changming Tan
+Date: 4/27/2020
+
+This is a pet dating website.
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -59,8 +66,8 @@
                 <h1 class="text-center">My Pets Dating Website</h1>
                 <p>Welcome to the web's most successful pet dating website. At <b>My Pets Dating Website</b>, your pet
                     will meet another like-minded partner. We have the highest success rate of pet couples on the web.
-                    User's are matched by interest and location. Find out why so many others have found love on our
-                    site!</p>
+                    User's pets are matched by interest and location. Find out why so many others' pets have found love
+                    on our site!</p>
             </div>
             <div class="container">
                 <h4 class="text-center">Hear what our users are saying about us</h4>
