--- a/views/interests.html
+++ b/views/interests.html
@@ -6,103 +6,47 @@
         <form id="interests" action="#" method="post" class="row">
             <div class="container">
                 <label class="font-weight-bold">In-door Interests</label>
+
                 <div class="row">
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="tv">
-                            <label class="custom-control-label" for="tv">tv</label>
+                    <repeat group="{{ @indoors }}" value="{{ @indoor }}">
+                        <div class="col-6 col-sm-3">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="{{ @indoor }}"
+                                       name="interests[]" value="{{ @indoor }}">
+                                <label class="custom-control-label" for="{{ @indoor }}">{{ @indoor }}</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="movies">
-                            <label class="custom-control-label" for="movies">movies</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="toys">
-                            <label class="custom-control-label" for="toys">playing toys</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="tug-of-war">
-                            <label class="custom-control-label" for="tug-of-war">tug-of-war</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="treat">
-                            <label class="custom-control-label" for="treat">treat hunt</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="shell">
-                            <label class="custom-control-label" for="shell">shell game</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="count">
-                            <label class="custom-control-label" for="count">count numbers</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="chores">
-                            <label class="custom-control-label" for="chores">help with chores</label>
-                        </div>
-                    </div>
+                    </repeat>
                 </div>
+
             </div>
 
             <br><br><br><br>
 
             <div class="container">
                 <label class="font-weight-bold">Out-door Interests</label>
+
                 <div class="row">
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="hiking">
-                            <label class="custom-control-label" for="hiking">hiking</label>
+                    <repeat group="{{ @outdoors }}" value="{{ @outdoor }}">
+                        <div class="col-6 col-sm-3">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="{{ @outdoor }}"
+                                       name="interests[]" value="{{ @outdoor }}">
+                                <label class="custom-control-label" for="{{ @outdoor }}">{{ @outdoor }}</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="swimming">
-                            <label class="custom-control-label" for="swimming">swimming</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="jogging">
-                            <label class="custom-control-label" for="jogging">jogging</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="walking">
-                            <label class="custom-control-label" for="walking">walking</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="geocaching">
-                            <label class="custom-control-label" for="geocaching">geocaching</label>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-3">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="diving">
-                            <label class="custom-control-label" for="diving">diving</label>
-                        </div>
-                    </div>
+                    </repeat>
                 </div>
+
+
             </div>
+
+
         </form>
-        <button type="submit" class="btn btn-primary float-right">Next ></button>
+
+        <div class="float-right p-2">
+            <button type="submit" form="interests" class="btn btn-primary">Next ></button>
+        </div>
 
     </div>
 </div>
