--- a/views/pinfo.html
+++ b/views/pinfo.html
@@ -6,6 +6,7 @@
 
         <form id="pinfo" action="#" method="post" class="row">
             <div class="col-lg-8">
+
                 <div class="form-group">
                     <label for="fname" class="font-weight-bold">First Name</label>
                     <div class="input-group">
@@ -15,25 +16,29 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="form-group">
                     <label for="lname" class="font-weight-bold">Last Name</label>
                     <input type="text" class="form-control" id="lname" name="lname">
                 </div>
+
                 <div class="form-group">
                     <label for="age" class="font-weight-bold">Age</label>
                     <input type="text" class="form-control" id="age" name="age">
                 </div>
+
                 <div class="form-group">
                     <label class="font-weight-bold">Gender</label><br>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="sex" id="male" value="male">
-                        <label class="form-check-label" for="male">Male</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="sex" id="female" value="female">
-                        <label class="form-check-label" for="female">Female</label>
+                        <repeat group="{{ @genders }}" value="{{ @gender }}">
+                            <input class="form-check-input" type="radio" name="sex" id="{{ @gender }}"
+                                   value="{{ @gender }}">
+                            <label for="{{ @gender }}" class="form-check-label"> {{ ucfirst(@gender) }}&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                            </input>
+                        </repeat>
                     </div>
                 </div>
+
                 <div class="form-group">
                     <label for="phone" class="font-weight-bold">Phone Number</label>
                     <input type="text" class="form-control" id="phone" name="phone" placeholder="123-4567-8900">
