--- a/views/profile.html
+++ b/views/profile.html
@@ -7,75 +7,26 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label for="email" class="font-weight-bold">Email</label>
-                    <input type="text" class="form-control" id="email">
+                    <input type="text" class="form-control" id="email" name="email">
                 </div>
+
                 <div class="form-group">
                     <label for="state" class="font-weight-bold">State</label>
                     <select class="form-control" id="state" name="state">
-                        <option value="none">---Please Select---</option>
-                        <option value="AK">Alaska</option>
-                        <option value="AL">Alabama</option>
-                        <option value="AR">Arkansas</option>
-                        <option value="AZ">Arizona</option>
-                        <option value="CA">California</option>
-                        <option value="CO">Colorado</option>
-                        <option value="CT">Connecticut</option>
-                        <option value="DC">District of Columbia</option>
-                        <option value="DE">Delaware</option>
-                        <option value="FL">Florida</option>
-                        <option value="GA">Georgia</option>
-                        <option value="HI">Hawaii</option>
-                        <option value="IA">Iowa</option>
-                        <option value="ID">Idaho</option>
-                        <option value="IL">Illinois</option>
-                        <option value="IN">Indiana</option>
-                        <option value="KS">Kansas</option>
-                        <option value="KY">Kentucky</option>
-                        <option value="LA">Louisiana</option>
-                        <option value="MA">Massachusetts</option>
-                        <option value="MD">Maryland</option>
-                        <option value="ME">Maine</option>
-                        <option value="MI">Michigan</option>
-                        <option value="MN">Minnesota</option>
-                        <option value="MO">Missouri</option>
-                        <option value="MS">Mississippi</option>
-                        <option value="MT">Montana</option>
-                        <option value="NC">North Carolina</option>
-                        <option value="ND">North Dakota</option>
-                        <option value="NE">Nebraska</option>
-                        <option value="NH">New Hampshire</option>
-                        <option value="NJ">New Jersey</option>
-                        <option value="NM">New Mexico</option>
-                        <option value="NV">Nevada</option>
-                        <option value="NY">New York</option>
-                        <option value="OH">Ohio</option>
-                        <option value="OK">Oklahoma</option>
-                        <option value="OR">Oregon</option>
-                        <option value="PA">Pennsylvania</option>
-                        <option value="PR">Puerto Rico</option>
-                        <option value="RI">Rhode Island</option>
-                        <option value="SC">South Carolina</option>
-                        <option value="SD">South Dakota</option>
-                        <option value="TN">Tennessee</option>
-                        <option value="TX">Texas</option>
-                        <option value="UT">Utah</option>
-                        <option value="VA">Virginia</option>
-                        <option value="VT">Vermont</option>
-                        <option value="WA">Washington</option>
-                        <option value="WI">Wisconsin</option>
-                        <option value="WV">West Virginia</option>
-                        <option value="WY">Wyoming</option>
+                        <repeat group="{{ @states }}" value="{{ @state }}">
+                            <option value="{{ @state }}"> {{ @state }}</option>
+                        </repeat>
                     </select>
                 </div>
+
                 <div class="form-group">
                     <label class="font-weight-bold">Seeking</label><br>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="sex" id="male" value="male">
-                        <label class="form-check-label" for="male">Male</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="sex" id="female" value="female">
-                        <label class="form-check-label" for="female">Female</label>
+                        <repeat group="{{ @sexes }}" value="{{ @sex }}">
+                            <input class="form-check-input" type="radio" name="sex" id="{{ @sex }}" value="{{ @sex }}">
+                            <label for="{{ @sex }}" class="form-check-label"> {{ ucfirst(@sex) }}&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                            </input>
+                        </repeat>
                     </div>
                 </div>
 
@@ -83,11 +34,14 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label for="biography" class="font-weight-bold">Biography</label>
-                    <textarea class="form-control" rows="5" id="biography">orem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem orem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumorem ipsumipsumorem ipsumorem ipsumorem ipsumorem ipsum</textarea>
+                    <textarea class="form-control" rows="5" id="biography" name="biography">Place holder text</textarea>
                 </div>
             </div>
         </form>
-        <button type="submit" class="btn btn-primary float-right">Next ></button>
+
+        <div class="float-right p-2">
+            <button type="submit" form="profile" class="btn btn-primary">Next ></button>
+        </div>
 
     </div>
 </div>
