--- a/views/home.html
+++ b/views/home.html
@@ -4,20 +4,20 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="container">
-                    <h1 class="text-center">My Pets Dating Website</h1>
-                    <p>Welcome to the web's most successful pet dating website. At <b>My Pets Dating Website</b>,
-                        your pet will meet another like-minded partner. We have the highest success rate of pet
-                        couples on the web. User's pets are matched by interest and location. Find out why so many
-                        others' pets have found love on our site!</p>
+                    <h1 class="text-center">My Dating Website</h1>
+                    <p>Welcome to the web's most successful dating website. At <b>My Dating Website</b>,
+                        you'll meet other like minded individuals. We have the highest success rate of couples on the
+                        web. Users are matched by interest and location. Find out why so many others have found love on
+                        our site!</p>
                 </div>
                 <div class="container">
-                    <h4 class="text-center">Hear what our users are saying about us</h4>
+                    <h4 class="text-center">Hear what our users are saying about us.</h4>
                     <hr>
                     <blockquote class="mx-4">
-                        <i>"My dog met the love of his life after only a month!" -Andrea</i><br>
-                        <i>"It was so easy to set up and profile and start meeting other people's pets. I didn't
-                            realize how many others were looking for love for their pets in my area." -Lucy</i><br>
-                        <i>"Just try it! You'll never be the same!" -Mike</i>
+                        <i>"I met the love of my life after only a month!" -Andrea</i><br>
+                        <i>"It was so easy to set up and profile and start meeting people. I didn't realize how many
+                            others were looking for love in my area." -John Smith</i><br>
+                        <i>"Just try it! You'll never be the same!" -Sarah</i>
                     </blockquote>
                     <hr>
                 </div>
@@ -26,8 +26,8 @@
                     <a class="btn btn-primary text-white" href="personal-information">Create a Profile!</a>
                 </div>
             </div>
-            <div class="col-sm-6 text-center">
-                <img src="images/pet.jpg" alt="pet couple" class="rounded">
+            <div class="col-sm-6 text-center p-3">
+                <img src="images/dating.jpg" alt="dating" class="rounded">
             </div>
         </div>
     </div>
