--- a/includes/header.html
+++ b/includes/header.html
@@ -20,7 +20,8 @@ This is my dating website.
     <script src="https://kit.fontawesome.com/d6ad110c86.js" crossorigin="anonymous"></script>
 
     <!-- favicon -->
-    <link rel="icon" href="https://images.vexels.com/media/users/3/144097/isolated/preview/3dedcd235214cdde6b4e171fdbf66c9d-heart-icon-by-vexels.png"
+    <link rel="icon"
+          href="https://images.vexels.com/media/users/3/144097/isolated/preview/3dedcd235214cdde6b4e171fdbf66c9d-heart-icon-by-vexels.png"
           type="image/gif" sizes="16x16">
 
     <link rel="stylesheet" href="styles/styles.css">
