--- a/views/summary.html
+++ b/views/summary.html
@@ -13,7 +13,7 @@
                         <li class="list-group-item">Email: {{ @SESSION.email }}</li>
                         <li class="list-group-item">State: {{ @SESSION.state }}</li>
                         <li class="list-group-item">Seeking: {{ @SESSION.sex }}</li>
-                        <li class="list-group-item">Interests: {{ implode(@SESSION.interests, " ") }}</li>
+                        <li class="list-group-item">Interests: {{ implode(@SESSION.interests, ", ") }}</li>
                     </ul>
                 </div>
             </div>
