--- a/views/pinfo.html
+++ b/views/pinfo.html
@@ -10,21 +10,36 @@
                 <div class="form-group">
                     <label for="fname" class="font-weight-bold">First Name</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="fname" name="fname">
+                        <input type="text" class="form-control" id="fname" name="fname" value="{{ @fname }}">
                         <div class="input-group-append">
                             <span class="input-group-text" id="basic-addon2"><i class="fas fa-address-card"></i></span>
                         </div>
                     </div>
+                    <span class="err">
+                        <check if="{{ isset(@errors['fname']) }}">
+                            {{ @errors['fname'] }}
+                        </check>
+                    </span>
                 </div>
 
                 <div class="form-group">
                     <label for="lname" class="font-weight-bold">Last Name</label>
-                    <input type="text" class="form-control" id="lname" name="lname">
+                    <input type="text" class="form-control" id="lname" name="lname" value="{{ @lname }}">
+                    <span class="err">
+                        <check if="{{ isset(@errors['lname']) }}">
+                            {{ @errors['lname'] }}
+                        </check>
+                    </span>
                 </div>
 
                 <div class="form-group">
                     <label for="age" class="font-weight-bold">Age</label>
-                    <input type="text" class="form-control" id="age" name="age">
+                    <input type="text" class="form-control" id="age" name="age" value="{{ @age }}">
+                    <span class="err">
+                        <check if="{{ isset(@errors['age']) }}">
+                            {{ @errors['age'] }}
+                        </check>
+                    </span>
                 </div>
 
                 <div class="form-group">
@@ -32,7 +47,11 @@
                     <div class="form-check form-check-inline">
                         <repeat group="{{ @genders }}" value="{{ @gender }}">
                             <input class="form-check-input" type="radio" name="gender" id="{{ @gender }}"
-                                   value="{{ @gender }}">
+                                   value="{{ @gender }}"
+                            <check if="{{ @gender == @selectedGender }}">
+                                checked="checked"
+                            </check>
+                            >
                             <label for="{{ @gender }}" class="form-check-label"> {{ ucfirst(@gender) }}&nbsp;&nbsp;&nbsp;&nbsp;</label>
                         </repeat>
                     </div>
@@ -40,10 +59,16 @@
 
                 <div class="form-group">
                     <label for="phone" class="font-weight-bold">Phone Number</label>
-                    <input type="text" class="form-control" id="phone" name="phone" placeholder="123-4567-8900">
+                    <input type="text" class="form-control" id="phone" name="phone" placeholder="123-456-7890" value="{{ @phone }}">
+                    <span class="err">
+                        <check if="{{ isset(@errors['phone']) }}">
+                            {{ @errors['phone'] }}
+                        </check>
+                    </span>
                 </div>
 
             </div>
+
             <div class="col-lg-4">
                 <div class="card mt-4">
                     <div class="card-body">
