--- a/views/profile.html
+++ b/views/profile.html
@@ -7,23 +7,41 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label for="email" class="font-weight-bold">Email</label>
-                    <input type="text" class="form-control" id="email" name="email">
+                    <input type="text" class="form-control" id="email" name="email" value="{{ @email }}">
+                    <span class="err">
+                        <check if="{{ isset(@errors['email']) }}">
+                            {{ @errors['email'] }}
+                        </check>
+                    </span>
                 </div>
 
                 <div class="form-group">
                     <label for="state" class="font-weight-bold">State</label>
                     <select class="form-control" id="state" name="state">
                         <repeat group="{{ @states }}" value="{{ @state }}">
-                            <option value="{{ @state }}"> {{ @state }}</option>
+                            <option value="{{ @state }}"
+                            <check if="{{ @state == @selectedState }}">selected="selected"</check>
+                            > {{ @state }}</option>
                         </repeat>
                     </select>
+                    <span class="err">
+                        <check if="{{ isset(@errors['state']) }}">
+                            {{ @errors['state'] }}
+                        </check>
+                    </span>
                 </div>
 
                 <div class="form-group">
                     <label class="font-weight-bold">Seeking</label><br>
                     <div class="form-check form-check-inline">
                         <repeat group="{{ @sexes }}" value="{{ @sex }}">
-                            <input class="form-check-input" type="radio" name="sex" id="{{ @sex }}" value="{{ @sex }}">
+                            <input class="form-check-input" type="radio" name="sex" id="{{ @sex }}" value="{{ @sex }}"
+
+                            <check if="{{ @sex == @selectedSex }}">
+                                checked="checked"
+                            </check>
+
+                            >
                             <label for="{{ @sex }}" class="form-check-label"> {{ ucfirst(@sex) }}&nbsp;&nbsp;&nbsp;&nbsp;</label>
                         </repeat>
                     </div>
@@ -34,7 +52,7 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label for="biography" class="font-weight-bold">Biography</label>
-                    <textarea class="form-control" rows="5" id="biography" name="biography">Place holder text</textarea>
+                    <textarea class="form-control" rows="5" id="biography" name="biography">{{ @biography }}</textarea>
                 </div>
             </div>
 
