--- a/views/pinfo.html
+++ b/views/pinfo.html
@@ -59,12 +59,28 @@
 
                 <div class="form-group">
                     <label for="phone" class="font-weight-bold">Phone Number</label>
-                    <input type="text" class="form-control" id="phone" name="phone" placeholder="123-456-7890" value="{{ @phone }}">
+                    <input type="text" class="form-control" id="phone" name="phone" placeholder="123-456-7890"
+                           value="{{ @phone }}">
                     <span class="err">
                         <check if="{{ isset(@errors['phone']) }}">
                             {{ @errors['phone'] }}
                         </check>
                     </span>
+                </div>
+
+                <div class="form-group">
+
+                    <label for="phone" class="font-weight-bold">Premium Membership</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="premium" name="premium"
+                               value="{{ @premium }}"
+                        <check if="{{ @premium == @selectedPremium }}">
+                            checked="checked"
+                        </check>
+                        >
+                        <label class="form-check-label" for="premium">Sign me up for a Premium Account!</label>
+                    </div>
+
                 </div>
 
             </div>
