--- a/views/profile.html
+++ b/views/profile.html
@@ -61,16 +61,18 @@
 
             <div class="col-lg-6">
 
-                <div class="form-group">
-                    <label class="font-weight-bold">You can upload an image of yourself</label><br>
-                    <div class="card-body border">
-                        <form action="upload.php" method="post" enctype="multipart/form-data">
-                            Select image to upload:
-                            <input type="file" name="fileToUpload" id="fileToUpload">
-                            <input type="submit" value="Upload Image" name="submit">
-                        </form>
+                <check if="{{ @SESSION.pInfo instanceof PremiumMember }}">
+                    <div class="form-group">
+                        <label class="font-weight-bold">You can upload an image of yourself</label><br>
+                        <div class="card-body border">
+                            <form action="upload.php" method="post" enctype="multipart/form-data">
+                                Select image to upload:
+                                <input type="file" name="fileToUpload" id="fileToUpload">
+                                <input type="submit" value="Upload Image" name="submit">
+                            </form>
+                        </div>
                     </div>
-                </div>
+                </check>
 
                 <div class="form-group">
                     <label for="biography" class="font-weight-bold">Biography</label>
