--- a/views/summary.html
+++ b/views/summary.html
@@ -6,7 +6,9 @@
 
                 <div class="card">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Name: {{ @SESSION.pInfo->getFname() }} {{ @SESSION.pInfo->getLname() }}</li>
+                        <li class="list-group-item">Name: {{ @SESSION.pInfo->getFname() }} {{ @SESSION.pInfo->getLname()
+                            }}
+                        </li>
 
                         <check if="{{ !empty(@SESSION.pInfo->getGender()) }}">
                             <li class="list-group-item">Gender: {{ @SESSION.pInfo->getGender() }}</li>
@@ -23,8 +25,13 @@
 
                         <check if="{{ @SESSION.pInfo instanceof PremiumMember && (!empty(@SESSION.pInfo->getInDoorInterests()) || !empty(@SESSION.pInfo->getOutDoorInterests())) }}">
                             <li class="list-group-item">Interests:
-                                <check if="{{ !empty(@SESSION.pInfo->getInDoorInterests()) }}">{{ implode(@SESSION.pInfo->getInDoorInterests(), ", ") }}<check if="{{ !empty(@SESSION.pInfo->getOutDoorInterests()) }}">,</check></check>
-                                <check if="{{ !empty(@SESSION.pInfo->getOutDoorInterests()) }}">{{ implode(@SESSION.pInfo->getOutDoorInterests(), ", ") }}</check>
+                                <check if="{{ !empty(@SESSION.pInfo->getInDoorInterests()) }}">{{
+                                    implode(@SESSION.pInfo->getInDoorInterests(), ", ") }}
+                                    <check if="{{ !empty(@SESSION.pInfo->getOutDoorInterests()) }}">,</check>
+                                </check>
+                                <check if="{{ !empty(@SESSION.pInfo->getOutDoorInterests()) }}">{{
+                                    implode(@SESSION.pInfo->getOutDoorInterests(), ", ") }}
+                                </check>
                             </li>
                         </check>
 
@@ -35,12 +42,14 @@
             <div class="col-lg-6 text-center">
                 <img src="https://pluspng.com/img-png/user-png-icon-male-user-icon-512.png" alt="user" width="350"
                      height="350">
-                <div class="text-left p-3">
-                    <check if="{{ !empty(@SESSION.pInfo->getBio()) }}">
+
+                <check if="{{ !empty(@SESSION.pInfo->getBio()) }}">
+                    <div class="text-left p-3">
                         <h3>Biography</h3>
                         <p>{{ @SESSION.pInfo->getBio() }}</p>
-                    </check>
-                </div>
+                    </div>
+                </check>
+
             </div>
 
         </div>
